Avoiding streaming message being covered by input container

--- a/spa/src/style.css
+++ b/spa/src/style.css
@@ -782,6 +782,10 @@ el-tabs__item {
         padding-bottom: 150px !important;
     }
 
+    .avoid-streaming-message-being-cover-by-input-container {
+        padding-bottom: 100px !important;
+    }
+
     .message-content-container {
         margin-left: 0 !important; /* 容器也贴左 */
         margin-right: 0 !important; /* 取消右侧间距 */
